--- a/style.css
+++ b/style.css
@@ -97,7 +97,7 @@ td:not(.bezkropki):hover::after {
 
 @media only screen and (max-height:600px) {
     td {
-        font-size:1rem;
+        font-size:5vh;
     }
 }
 
